force-app/main/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Basis_of_Fees__c</fullName>
        <label>Basis of Fees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Assessments and Reports</fullName>
                </value>
                <value>
                    <fullName>Candidates</fullName>
                </value>
                <value>
                    <fullName>Full-Time Equivalents (FTEs)</fullName>
                </value>
                <value>
                    <fullName>Participants</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
                <value>
                    <fullName>CPS Days</fullName>
                </value>
                <value>
                    <fullName>LPS Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Friendly_Name__c</fullName>
        <formula>Product2.Client_Friendly_Name__c</formula>
        <label>Client Friendly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <formula>Product2.Deployment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Request #</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Project_Invoice__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Invoice__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_End_Date__c</fullName>
        <label>Legacy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Start_Date__c</fullName>
        <label>Legacy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Services__c</fullName>
        <label>Number of Service Deliveries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Id__c</fullName>
        <label>Opportunity Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Form_Category__c</fullName>
        <formula>TEXT(Product2.Order_Form_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Form Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>This formula is used in OrderProduct Related List on the Project</description>
        <formula>IF(TEXT(Order.Status) = &apos;In Approval&apos;, &apos;Under Review&apos;, TEXT(Order.Status))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Offering Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate Essential</fullName>
                </value>
                <value>
                    <fullName>Graduate Advanced</fullName>
                </value>
                <value>
                    <fullName>Graduate Ultimate</fullName>
                </value>
                <value>
                    <fullName>Volume Essential</fullName>
                </value>
                <value>
                    <fullName>Volume Advanced</fullName>
                </value>
                <value>
                    <fullName>Apprentice Essential</fullName>
                </value>
                <value>
                    <fullName>Tech Essential</fullName>
                </value>
                <value>
                    <fullName>Tech Advanced</fullName>
                </value>
                <value>
                    <fullName>Managerial Essential</fullName>
                </value>
                <value>
                    <fullName>Managerial Advanced</fullName>
                </value>
                <value>
                    <fullName>Managerial Ultimate</fullName>
                </value>
                <value>
                    <fullName>Video Essential</fullName>
                </value>
                <value>
                    <fullName>Video Advanced</fullName>
                </value>
                <value>
                    <fullName>Video Ultimate</fullName>
                </value>
                <value>
                    <fullName>Professional Essential</fullName>
                </value>
                <value>
                    <fullName>Professional Advanced</fullName>
                </value>
                <value>
                    <fullName>Professional Ultimate</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Mobilize Essential</fullName>
                </value>
                <value>
                    <fullName>Mobilize Advanced</fullName>
                </value>
                <value>
                    <fullName>Mobilize Ultimate</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Hiring Essential</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Hiring Advanced</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Hiring Ultimate</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Review Essential</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Review Advanced</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Review Ultimate</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>OA 1:1 Essential</fullName>
                </value>
                <value>
                    <fullName>OA 1:1 Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>iAssess</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
                <value>
                    <fullName>Talent Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposition__c</fullName>
        <label>Use-case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume Hiring</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring</fullName>
                </value>
                <value>
                    <fullName>Managerial Hiring</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership / Executive Hiring </fullName>
                </value>
                <value>
                    <fullName>Professional Hiring</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Early Careers Hiring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <label>Renewability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Order_Number__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Order.Id,Order.OrderNumber,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scoped_CPS_days__c</fullName>
        <label>Scoped CPS days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_LPS_days__c</fullName>
        <label>Scoped LPS days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>PS Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Cap__c</fullName>
        <label>Solution Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_of_PS_Scoping__c</fullName>
        <label>Source of PS Scoping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E2E Scoping Tool</fullName>
                </value>
                <value>
                    <fullName>Other Existing Pricing Calculator</fullName>
                </value>
                <value>
                    <fullName>Other Scoping Template</fullName>
                </value>
                <value>
                    <fullName>None Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Equivalent_Units__c</fullName>
        <label>Total Equivalent Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_PS_Items__c</fullName>
        <formula>IF(ISPICKVAL(Order.Status, &apos;Cancelled&apos;) ,0,Total_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price (PS Items)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Quantity  *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage_Allowance__c</fullName>
        <label>Usage Allowance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capped</fullName>
                </value>
                <value>
                    <fullName>Uncapped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>